src/objects/PLBS_Product__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Product_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Family__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PLBS_Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Family</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cashews</fullName>
                </value>
                <value>
                    <fullName>Almonds</fullName>
                </value>
                <value>
                    <fullName>Walnuts</fullName>
                </value>
                <value>
                    <fullName>Pistachios in shell</fullName>
                </value>
                <value>
                    <fullName>Pistachios kernels</fullName>
                </value>
                <value>
                    <fullName>Macadamias</fullName>
                </value>
                <value>
                    <fullName>Hazelnuts</fullName>
                </value>
                <value>
                    <fullName>Pine Nuts</fullName>
                </value>
                <value>
                    <fullName>Pecans</fullName>
                </value>
                <value>
                    <fullName>Brazil Nuts</fullName>
                </value>
                <value>
                    <fullName>Peanuts</fullName>
                </value>
                <value>
                    <fullName>Nut mixes</fullName>
                </value>
                <value>
                    <fullName>Trail mixes</fullName>
                </value>
                <value>
                    <fullName>Seeds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Private Label Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All PLBS Products</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private Label Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>